Update .writeANewTweet to write-a-new-tweet to avoid camelCase

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       TWEETER
     </span>
     <span id="nav-right">
-      <div class="writeANewTweet">
+      <div class="write-new-tweet">
         <strong class="write"><b>Write</b></strong> a new tweet
       </div>
     </span>
