Change header to main-header for better understandability

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
   
   
   <!-- header avatar and username -->
-  <header class="header">
+  <header class="main-header">
     <img src="/images/zombie.png" id="zombie"> 
     <h2>Nolan Don</h2>
   </header>
